--- a/week 2/index.html
+++ b/week 2/index.html
@@ -4,6 +4,7 @@
         <h1>Wowowowow! My own website!!!</h1>
         <h2>I wonder what kind of havoc I'll be creating</h2>
 
-        <p>I love cats more than dogs. But my family has more dogs than cats.<br> Crazy no?</p>
+        <p>I love cats more than dogs. But my family has more dogs than cats.<br>
+            Crazy no?<br>Then again, I do love animals in general so, it doesnt really matter.</p>
     </head>
 </html>
