--- a/week 2/index.html
+++ b/week 2/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <h1>Wowowowow! My own website!!!</h1>
-        <h2>I wonder what kind of havoc I'll be creating</h2>
+        <body style="background-color:rgb(125, 207, 218);">
+            <h1 style="text-align:center">Welcome to the website of chaos!</h1>
+            <h2>See the interesting inner workings of Marot.</h2>
 
-        <p>I love cats more than dogs. But my family has more dogs than cats.<br>
-            Crazy no?<br>Then again, I do love animals in general so, it doesnt really matter.</p>
+            <p style="background-color:rgb(235, 150, 200);">I love cats more than dogs. But my family has more dogs than cats.<br>
+                Crazy no?<br>Then again, I do love animals in general so, it doesnt really matter.</p>
+        </body>
+        
     </head>
 </html>
