--- a/week 2/index.html
+++ b/week 2/index.html
@@ -1,12 +1,30 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <body style="background-color:rgb(125, 207, 218);">
-            <h1 style="text-align:center">Welcome to the website of chaos!</h1>
-            <h2>See the interesting inner workings of Marot.</h2>
+        <body style="background-color:rgb(0, 0, 0);">
+            <h1 style="color:rgb(26, 214, 41); text-align:center; font-family: Courier;">Welcome to the<br>the internet!</h1>
+            <hr>
+            <h2 style="color:rgb(26, 214, 41); font-family: Courier;">Why is the internet so great, you may ask?</h2>
 
-            <p style="background-color:rgb(235, 150, 200);">I love cats more than dogs. But my family has more dogs than cats.<br>
-                Crazy no?<br>Then again, I do love animals in general so, it doesnt really matter.</p>
+            <p style="color:rgb(26, 214, 41); font-family: Courier;">
+                <strong><u>I like to think that I was born in the right generation.</u><br><br></strong>
+
+                The internet has made it easier for everyone to connect to each other, wherever<br>
+                they are on the planet. Before, we had to send letters to each other, or go through<br>
+                large encyclopedias just to get accurate information. Even then, encyclopedias were not<br>
+                always up to date. But now, most things are as easy as 1-2-3. We have our smartphones,<br>
+                small compact devices that can scour the internet for information, play our music,<br>
+                send our messages, and more. It's still crazy to think that these small devices serve <br>
+                the purpose of multiple devices back in the 1990s. Such is technology. Always advancing.</p>
+
+            <hr>
+
+            <h2 style="color:rgb(26, 214, 41); font-family: Courier;">
+            Look at this kid. It took me, at max, 4 seconds, to find a picture related to the internet.</h2>
+
+            <img src="kid_internet.jpg" class="center" alt="some kid with glasses">
+
+            <p style="color:rgb(26, 214, 41); font-family: Courier;">Although I don't know why I chose this photo. Maybe because it looks so funny to me.</p>
         </body>
         
     </head>
