--- a/week3/index.html
+++ b/week3/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-
+        <title>Agent 666</title>
         <!--CSS-->
         <!--Reference: https://css-tricks.com/snippets/css/typewriter-effect/-->
-
+        <link rel="icon" type="image/x-icon" href="favicon.ico">
         <style>
 
             body {
@@ -103,6 +103,8 @@
                     <li>Looking for indie/obscure music artists</li>
                     <li>Watching video essays on YouTube about politics, culture and memes</li>
                 </ul>
+
+
                 
 
             </p>
