--- a/week5/first_page.html
+++ b/week5/first_page.html
@@ -3,14 +3,62 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" type="text/css" href="styles.css">
+    <title>Welcome, user.</title>
 </head>
 <body>
-    <h1 class="hacker-text" data-value="Hello World">Hello World</h1>
+    <canvas id="canvas" style="background: #111;"></canvas>
 
+    <div class="first_page">
+        <h1 class="big_font">Hello and welcome, <span class="hacker-text" data-value="SIA">SIA</span></h1>
+    </div>
+    
+
+    
     <script>
-        const letters = "ABCDEFGHIJKLMNOPQRSTUVWXYZ123456789";
+
+    // This is the matrix background code.
+
+    var canvas = document.getElementById('canvas');
+    var context = canvas.getContext('2d');
+    var W = window.innerWidth;
+    var H = window.innerHeight;
+
+    canvas.width = W;
+    canvas.height = H;
+
+    var fontSize = 16;
+    var columns = Math.floor(W / fontSize);
+    var drops = [];
+    for(var i=0; i<columns; i++){
+        drops.push(0);
+    }
+    var str = "JavaScript Hacking Effect";
+    function draw(){
+        context.fillStyle = "rgba(0,0,0,0.05)";
+        context.fillRect(0, 0, W, H);
+        context.fontSize = "700 " + fontSize + "px";
+        context.fillStyle = "#00cc33";
+        for(var i=0; i<columns; i++){
+            var index = Math.floor(Math.random()*str.length);
+            var x = i * fontSize;
+            var y = drops[i] * fontSize;
+            context.fillText(str[index], x, y);
+            if(y >= canvas.height && Math.random() > 0.99){
+                drops[i] = 0;
+            }
+            drops[i]++;
+        }
+    }
+    draw();
+    setInterval(draw, 35);
+
+    // -------STOPS HERE-----------
+
+    // Hacker Text Starts Here
+
+    const letters = "ABCDEFGHIJKLMNOPQRSTUVWXYZ123456789";
 
         class HackerText {
             constructor(element) {
@@ -46,6 +94,8 @@
         // Apply the class to each element with the "hacker-text" class
         const hackerTextElements = document.querySelectorAll('.hacker-text');
         hackerTextElements.forEach(element => new HackerText(element));
+
+
     </script>
 </body>
 </html>
