--- a/week5/index.html
+++ b/week5/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Agent 666</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" type="text/css" href="styles.css">
@@ -107,41 +108,7 @@
 </div>
 
 </div>
-<script>
-    var canvas = document.getElementById('canvas');
-    var context = canvas.getContext('2d');
-    var W = window.innerWidth;
-    var H = window.innerHeight;
-
-    canvas.width = W;
-    canvas.height = H;
-
-    var fontSize = 16;
-    var columns = Math.floor(W / fontSize);
-    var drops = [];
-    for(var i=0; i<columns; i++){
-        drops.push(0);
-    }
-    var str = "JavaScript Hacking Effect";
-    function draw(){
-        context.fillStyle = "rgba(0,0,0,0.05)";
-        context.fillRect(0, 0, W, H);
-        context.fontSize = "700 " + fontSize + "px";
-        context.fillStyle = "#00cc33";
-        for(var i=0; i<columns; i++){
-            var index = Math.floor(Math.random()*str.length);
-            var x = i * fontSize;
-            var y = drops[i] * fontSize;
-            context.fillText(str[index], x, y);
-            if(y >= canvas.height && Math.random() > 0.99){
-                drops[i] = 0;
-            }
-            drops[i]++;
-        }
-    }
-    draw();
-    setInterval(draw, 35);
-</script>
+<script src="script.js"></script>
 </body>
 
 </html>
