Home Button Update

--- a/week5/first_page.html
+++ b/week5/first_page.html
@@ -13,7 +13,10 @@
     <div class="first_page">
         <h1 class="big_font">Hello and welcome, <span class="hacker-text" data-value="USER">USER</span></h1>
     </div>
-    
+    <br>
+    <div class="button">
+        <a href='index.html'>Proceed</a>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
