--- a/week5/index.html
+++ b/week5/index.html
@@ -23,7 +23,7 @@
             Alias: Marot, Carrot, Kali, Mallows, Rotty, Rot-Rot<br>
             Institution: Asia Pacific College<br>
             Course: BS Computer Science Specializing in Cybersecurity and Forensics<br>
-            Scholsarships: ARMED FORCES OF THE PHILIPPINES OFFICER'S LADIES CLUB SCHOLARSHIP (AFPOLC) (60%)<br>
+            Scholarships: ARMED FORCES OF THE PHILIPPINES OFFICER'S LADIES CLUB SCHOLARSHIP (AFPOLC) (60%)<br>
             Department of Science and Technology Science Education Institute (DOST-SEI) Merit <span class="endline">Scholar </span><br>
         </h2>
     </div>
