--- a/week5/index.html
+++ b/week5/index.html
@@ -11,6 +11,16 @@
 
 <body>
     <canvas id="canvas" style="background: #111;"></canvas>
+
+    <div class="index_tab">
+        <div class="index_button">
+            <a href="first_page.html"><b>Home_Screen</b></a>
+        </div>
+        <div class="index_button">
+            <a href="resources.html"><b>Resources (to be added)</b></a>
+        </div>
+
+    </div>
     <h1 class="heading">Hello, and welcome, AGENT 666 </h1>
 
     <div class="agent-profile">
@@ -100,8 +110,6 @@
     Check out on Goodreads<a href="https://www.goodreads.com/book/show/459134.Obsessive_Genius"> here.</a></p></p></p>
 
         </div>
-
-
     </div>
 
 
