Resource Page List Test

--- a/week5/resources.html
+++ b/week5/resources.html
@@ -17,6 +17,17 @@
             <a href="index.html"><b>Agent_666</b></a>
         </div>
     </div>
+
+    <h1 class="heading">>>>Resources</h1>
+    <p>Testing
+        <ul>
+            <li>Yo</li>
+        </ul>
+
+
+    </p>
+
+
     
 </body>
 </html>
