--- a/week5/index.html
+++ b/week5/index.html
@@ -17,7 +17,7 @@
             <a href="first_page.html"><b>Home_Screen</b></a>
         </div>
         <div class="index_button">
-            <a href="resources.html"><b>Resources (to be added)</b></a>
+            <a href="resources.html"><b>Resources</b></a>
         </div>
 
     </div>
