--- a/week5/resources.html
+++ b/week5/resources.html
@@ -19,12 +19,38 @@
     </div>
 
     <h1 class="heading">>>>Resources</h1>
-    <p>Testing
+    <hr>
+    <h2><span class="endline">IMAGES</span></h2>
+    <p>
+        Book Covers (Sourced from Goodreads)
         <ul>
-            <li>Yo</li>
+            <li><a href="http://localroger.com/prime-intellect/">Metamorphosis of Primme Intellect</a></li>
+            <li><a href="https://www.goodreads.com/book/show/4069.Man_s_Search_for_Meaning">Man's Search for Meaning</a></li>
+            <li><a href="https://www.goodreads.com/book/show/49090884-tender-is-the-flesh">Tender is the Flesh</a></li>
+            <li><a href="https://www.goodreads.com/book/show/18373.Flowers_for_Algernon">Flowers for Algernon</a></li>
+            <li><a href="https://www.goodreads.com/book/show/40542121-lord-of-the-flies">Lord of the Flies</a></li>
+            <li><a href="https://www.goodreads.com/book/show/459134.Obsessive_Genius">Obsessive Genius: The Inner World of Marie Curie</a></li>
         </ul>
-
-
+        Moth Circuitry Image (Metamorphosis of Prime Intellect Book Cover, edited by Maryrose Pergis)
+        <ul>
+            <li><a href="http://localroger.com/prime-intellect/">http://localroger.com/prime-intellect/</a></li>
+        </ul>
+    </p>
+    <br>
+    <h2>DESIGN <span class="endline">ELEMENTS</span></h2>
+    <p>Matrix Background inspiration
+        <br>(Hacking Matrix Rain Effect using HTML CSS & JavaScript by <b>CodeCreative</b>)
+        <ul>
+            <li><a href="https://www.youtube.com/watch?v=uIq9gmlenlA">https://www.youtube.com/watch?v=uIq9gmlenlA</a></li>
+        </ul>
+        Cursor blink inspiration (Type Writer Effect by <b>Geoff Graham</b>)
+        <ul>
+            <li><a href="https://css-tricks.com/snippets/css/typewriter-effect/">https://css-tricks.com/snippets/css/typewriter-effect/</a></li>
+        </ul>
+        JavaScript Random Text Display Inspiration (The Ultimate Hacker Effect That Anyone Can Do by <b>Hyperplexed</b>)
+        <ul>
+            <li><a href="https://www.youtube.com/watch?v=W5oawMJaXbU">https://www.youtube.com/watch?v=W5oawMJaXbU</a></li>
+        </ul>
     </p>
 
 
